init(personal-site) version 0.1

--- a/index.html
+++ b/index.html
@@ -1,4 +1,218 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Carlos Tussi Leite</title>
+
+    <title>Hair Day</title>                 
+    <meta name="author" content="Carlos Eduardo Tussi">    
+    <meta name="description" content="Data Scientist">    
+
+
+    <meta name="rating" content="safe for kids">         
+    <meta name="language" content="english">             
+    <meta name="copyright" content="Copyright 2025">           
+
+    <!-- Open Graph Protocol -->
+    
+    <meta property="og:title" content="Carlos Eduardo Tussi">      
+    <meta property="og:type" content="Personal Website">                              
+    <meta property="og:url" content="https://carlostussi.github.io/">              
+    <meta property="og:description" content="Data Scientist">              
+    <meta property="og:image" content="/files/Artboard 1">                            
+    <meta property="og:locale" content="en_US">                            
+    <meta property="og:site_name" content="Data Scientist">               
+
+     <!-- CSS File -->      
+     <link rel="stylesheet" href="css/styles.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <header id="home">  
+        <div class = "main-menu" id = "main-menu-js">
+            <!-- Navigation Bar -->
+            <nav>
+                <a href="javascript:void(0)" class="x-button" onclick="closeNav()">&times;</a>
+                <ul>
+                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="index.html#projects">Projects</a></li>
+                    <li><a href="index.html#projects">Resume</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class = "bar-icon" id = "bar-icon" onclick="openNav()">
+            <i class="fa fa-bars" style="font-size:20px; color: grey;"></i>
+        </div>
+        <!-- Website name or logo -->     
+         <div class="photo-title primary-theme end-section-padding">
+            <img src="/assets/photo.JPG" alt="main personal photo">
+            <h1>Carlos Eduardo Tussi</h1>
+            <h1>Data Scientist</h1>
+        </div>
+	</header>
+    <!-- Main Content -->
+    <main>
+        <section class="about secondary-theme end-section-padding" id="about"> 
+			<h2>About</h2> <hr>
+			<article>
+			<p class="intro">Computer Science graduate, with a passion for data and experience working in international environments. Currently expanding my expertise, pursuing an MSc in Data Science and AI. <br> <strong>[This page is under construction]</strong></p> 
+		</article>
+        </section>
+		<section class="projects primary-theme end-section-padding" id = "projects">
+            <h2>Projects</h2><hr> 
+            <ul>       
+            <li>
+				<h3>Machine Learning Model for Coral Reef Fish Species Diversity Prediction</h3>
+				<p>Machine learning model to predict the diversity index of fish speciesin coral reef ecosystems. Utilized data analysis, feature engineering,and model training techniques.</p>
+                <a href="https://github.com/gpealat/coralreef">More details</a>
+            </li>
+			<li>
+				<h3>Rio Property Price Predictor</h3>
+				<p> Airbnb rental price prediction model using ML pipelines. Model integration into a web application for pricing insights.</p>
+                <a href="https://github.com/CarlosTussi/rio_listings">More details</a>
+            </li>
+        </ul>
+        </section>
+        <section class = "resume secondary-theme end-section-padding" id="resume">
+            <h2>Resume</h2><hr>
+            <article>
+                <h3>Education</h3>
+                <ol class="education">
+                    <li>
+                        <ul class="education-item">
+                            <li>Applied MSc in Data Science and AI</li>
+                            <li>DSTI School of Engineering</li>
+                            <li>Sophia Antipolis, France</li>
+                            <li>2024 - 2026 (expected)</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class="education-item">
+                            <li>Bachelor of Computer Science
+                            <li>Federal University of Rio Grande do Sul</li>
+                            <li>Porto Alegre, Brazil</li>
+                            <li>2011 - 2016</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class="education-item">
+                            <li>Science Without Borders </li>
+                            <li>Wuhan University of Technology</li>
+                            <li>Wuhan, China</li>
+                            <li>2013 - 2014</li>
+                        </ul>
+                    </li>
+                </ol>
+            </article>
+            <article>
+                <h3>Certifications</h3>
+                <ul>
+                    <li>
+                        <ul class = "certification-item">
+                            <li>Neo4j Certified Professional
+                            <li>Neo4j GraphAcademy</li>
+                            <li>08/2024</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class = "certification-item">
+                            <li>DELF B2
+                            <li>France Éducation international</li>
+                            <li>01/2024</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class = "certification-item">
+                            <li>HSK Level 5
+                            <li>National Chinese Proficiency Test Committee</li>
+                            <li>06/2015</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class = "certification-item">
+                            <li>Cambridge CAE
+                            <li>Cambridge University Press & Assessment</li>
+                            <li>03/2013</li>
+                        </ul>
+                    </li>
+            </article>
+            <article>
+                <h3>Experience</h3>
+                <ul>
+                   <li>
+                        <ul class = "experience-item">
+                            <li>Italian Language Learning</li>
+                            <li>Milan, Italy</li>
+                            <li>2022 - 2023</li>
+                        </ul>
+                    </li>
+    
+                    <li>
+                        <ul class = "experience-item">
+                            <li>Flight Steward</li>
+                            <li>Dubai, UAE</li>
+                            <li>2016 - 2022</li>
+                        </ul>
+                    </li>
+                </ul>
+            </article>
+            <article class = "skills">
+                <h3>Skills</h3>
+                <ul>
+                    <li class="skill-title">Data Science</li>
+                    <li>
+                        <ul>
+                            <li>Data Wrangling</li>
+                            <li>NumPy</li>
+                            <li>Pandas</li>
+                            <li>Scikit-learn</li>
+                            <li>Matplotlib</li>
+                            <li>Microsoft Excell</li>
+                        </ul>
+                    </li>
+                    <li class = "skill-title">Database</li>
+                    <li>
+                        <ul>
+                            <li>Microsoft SQL Server</li>
+                            <li>Neo4j</li>
+                            <li>MongoDB</li>
+                        </ul>
+                    </li>
+                    <li class = "skill-title">Programming</li>
+                    <li>
+                        <ul>
+                            <li>Python</li>
+                            <li>R</li>
+                            <li>SQL</li>
+                            <li>C</li>
+                            <li>HTML/CSS/JavaScript</li>
+                        </ul>
+                    </li>
+                </ul>
+            </article>
+        </section>
+		<section class="contact primary-theme" id = "contact">         
+            <article>
+				<h2>Contact</h2><hr>
+                <div class="contact-icons">
+                    <i class="fa fa-linkedin-square" style="font-size:36px"></i>
+                    <i class="fa fa-github" style="font-size:36px"></i>
+                </div>
+                <a href= "mailto:name@email.com">carlos.leite@edu.dsti.institute</a>
+            </article>
+        </section>
+    </main>
+    <!-- Copyright and other footeer content -->
+    <footer id="id-footer">
+        <div class="footer-copyright primary-theme">
+            <small>Carlos Eduardo Tussi © - All rights reserved.</small>         
+        </div>
+    </footer>
+
+	<!-- JS-->
+	<script src="/script/script.js"></script>
+</body>
 </html>
