--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     <!-- Main Content -->
     <main>
         <section class="about secondary-theme end-section-padding" id="about"> 
-			<h2>About</h2> <hr>
+			<h2>About <hr class = "hr-secondary"></h2>
 			<article>
 			<p class="intro">Computer Science graduate, with a passion for data and experience working in international environments. Currently expanding my expertise, pursuing an MSc in Data Science and AI. <br> <strong>[This page is under construction]</strong></p> 
 		</article>
         </section>
 		<section class="projects primary-theme end-section-padding" id = "projects">
-            <h2>Projects</h2><hr> 
+            <h2>Projects <hr class="hr-primary"> </h2>
             <ul>       
             <li>
 				<h3>Machine Learning Model for Coral Reef Fish Species Diversity Prediction</h3>
@@ -77,7 +77,7 @@
         </ul>
         </section>
         <section class = "resume secondary-theme end-section-padding" id="resume">
-            <h2>Resume</h2><hr>
+            <h2>Resume <hr class="hr-secondary"></h2>
             <article>
                 <h3>Education</h3>
                 <ol class="education">
@@ -196,10 +196,10 @@
         </section>
 		<section class="contact primary-theme" id = "contact">         
             <article>
-				<h2>Contact</h2><hr>
+				<h2>Contact <hr class="hr-primary"></h2>
                 <div class="contact-icons">
-                    <i class="fa fa-linkedin-square" style="font-size:36px"></i>
-                    <i class="fa fa-github" style="font-size:36px"></i>
+                    <a href="https://www.linkedin.com/in/cetleite/" ><i  class="fa fa-linkedin-square" style="font-size:36px"></i></a>
+                    <a href="https://github.com/CarlosTussi" ><i class="fa fa-github" style="font-size:36px"></i></a>
                 </div>
                 <a href= "mailto:name@email.com">carlos.leite@edu.dsti.institute</a>
             </article>
@@ -208,7 +208,7 @@
     <!-- Copyright and other footeer content -->
     <footer id="id-footer">
         <div class="footer-copyright primary-theme">
-            <small>Carlos Eduardo Tussi © - All rights reserved.</small>         
+            <small class="primary-theme">Carlos Eduardo Tussi © - All rights reserved.</small>         
         </div>
     </footer>
 
