Fix copyright padding for small screens

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <!-- Copyright and other footeer content -->
     <footer id="id-footer">
         <div class="footer-copyright primary-theme">
-            <small class="primary-theme">Carlos Eduardo Tussi © - All rights reserved.</small>         
+            <small >Carlos Eduardo Tussi © - All rights reserved.</small>         
         </div>
     </footer>
 
