Fixing navigation bar for desktop

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <title>Hair Day</title>                 
+    <title>CET - Data Scientist</title>                 
     <meta name="author" content="Carlos Eduardo Tussi">    
     <meta name="description" content="Data Scientist">    
 
@@ -20,8 +20,8 @@
     <meta property="og:type" content="Personal Website">                              
     <meta property="og:url" content="https://carlostussi.github.io/">              
     <meta property="og:description" content="Data Scientist">              
-    <meta property="og:image" content="/files/Artboard 1">                            
-    <meta property="og:locale" content="en_US">                            
+    <meta property="og:image" content="">                            
+    <meta property="og:locale" content="en_GB">                            
     <meta property="og:site_name" content="Data Scientist">               
 
      <!-- CSS File -->      
@@ -30,7 +30,7 @@
 </head>
 <body>
     <header id="home">  
-        <div class = "main-menu" id = "main-menu-js">
+        <div class = "mobile-menu" id = "mobile-menu-js">
             <!-- Navigation Bar -->
             <nav>
                 <a href="javascript:void(0)" class="x-button" onclick="closeNav()">&times;</a>
@@ -48,6 +48,15 @@
         </div>
         <!-- Website name or logo -->     
          <div class="photo-title primary-theme end-section-padding">
+            <nav class = "desktop-menu">
+                <ul>
+                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="index.html#projects">Projects</a></li>
+                    <li><a href="index.html#projects">Resume</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
+                </ul>
+            </nav>
             <img src="/assets/photo.JPG" alt="main personal photo">
             <h1>Carlos Eduardo Tussi</h1>
             <h1>Data Scientist</h1>
@@ -73,6 +82,11 @@
 				<h3>Rio Property Price Predictor</h3>
 				<p> Airbnb rental price prediction model using ML pipelines. Model integration into a web application for pricing insights.</p>
                 <a href="https://github.com/CarlosTussi/rio_listings">More details</a>
+            </li>
+            <li>
+				<h3>Websites</h3>
+				<p> Collection of websites using react.js framework.</p>
+                <a href="https://github.com/CarlosTussi/websites">More details</a>
             </li>
         </ul>
         </section>
