Different desktop style and design

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li><a href="index.html#home">Home</a></li>
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="index.html#projects">Projects</a></li>
-                    <li><a href="index.html#projects">Resume</a></li>
+                    <li><a href="index.html#resume">Resume</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -47,33 +47,45 @@
             <i class="fa fa-bars" style="font-size:20px; color: var(--hamburger-menu-color);"></i>
         </div>
         <!-- Desktop Navigation Bar -->    
-            <nav class = "desktop-menu primary-theme">
+            <nav class = "desktop-menu">
+                <div class="contact-icons">
+                </div>
                 <ul>
-                    <li><a href="index.html#home">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#projects">Projects</a></li>
-                    <li><a href="index.html#projects">Resume</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="index.html#home">HOME</a></li>
+                    <li><a href="index.html#about">ABOUT</a></li>
+                    <li><a href="index.html#projects">PROJECTS</a></li>
+                    <li><a href="index.html#resume">RESUME</a></li>
+                    <li><a href="index.html#contact">CONTACT</a></li>
                 </ul>
+                <div class="contact-icons">
+                    <a href="https://www.linkedin.com/in/cetleite/" ><i  class="fa fa-linkedin-square" style="font-size:36px"></i></a>
+                    <a href="https://github.com/CarlosTussi" ><i class="fa fa-github" style="font-size:36px"></i></a>
+                </div>
             </nav>
 
 	</header>
     <!-- Main Content -->
     <main>
         <section class="home primary-theme photo-title">
-            <img src="/assets/photo.JPG" alt="main personal photo">
-            <div class="name-title">
-                <h1>Carlos Eduardo Tussi</h1>
-                <h1>Data Scientist</h1>
-            </div>
+            <div class="home-card">
+                <img class="profile-photo" src="/assets/photo.JPG" alt="main personal photo">
+                <div class="name-title">
+                    <h1>Carlos Eduardo Tussi</h1>
+                    <h1>Data Scientist</h1>
+                </div>
+                <a href="#projects"><div class="button">PROJECTS</div></a>
+        </div>
 
         </section>
         <div class="transition-to-secondary"></div>
         <section class="about secondary-theme end-section-padding" id="about"> 
-			<h2>About <hr class = "hr-secondary"></h2>
+            <h2>About <hr class = "hr-secondary"></h2>
 			<article>
-			<p class="intro">Computer Science graduate, with a passion for data and experience working in international environments. Currently expanding my expertise, pursuing an MSc in Data Science and AI. <br> <strong>[This page is under construction]</strong></p> 
-		</article>
+			<p class="intro">Computer Science graduate, with a passion for data and 
+                experience working in international environments. 
+                Currently expanding my expertise, pursuing an MSc in Data 
+                Science and AI. <br> <strong>[This page is under construction]</strong></p> 
+        </article>
         </section>
         <div class="transition-to-primary"></div>
 		<section class="projects primary-theme end-section-padding" id = "projects">
