New design for projects page

--- a/index.html
+++ b/index.html
@@ -90,20 +90,35 @@
         <div class="transition-to-primary"></div>
 		<section class="projects primary-theme end-section-padding" id = "projects">
             <h2>Projects <hr class="hr-primary"> </h2>
-            <ul>       
-            <li>
-				<h3>Machine Learning Model for Coral Reef Fish Species Diversity Prediction</h3>
+            <ul class="projects-container">       
+            <li class="project-card">
+				<div class="project-title-container"><h3>Machine Learning Model for Coral Reef Fish Species Diversity Prediction</h3></div>
 				<p>Machine learning model to predict the diversity index of fish speciesin coral reef ecosystems. Utilized data analysis, feature engineering,and model training techniques.</p>
+                <ul>
+                    <li>Python</li>
+                    <li>EDA</li>
+                    <li>Model Training</li>
+                </ul>
                 <a href="https://github.com/gpealat/coralreef">More details</a>
             </li>
-			<li>
-				<h3>Rio Property Price Predictor</h3>
+			<li class="project-card">
+				<div class="project-title-container"><h3>Rio Property Price Predictor</h3></div>
 				<p> Airbnb rental price prediction model using ML pipelines. Model integration into a web application for pricing insights.</p>
+                <ul>
+                    <li>Python</li>
+                    <li>EDA</li>
+                    <li>Pipeline</li>
+                    <li>Web App</li>
+                </ul>
                 <a href="https://github.com/CarlosTussi/rio_listings">More details</a>
             </li>
-            <li>
-				<h3>Websites</h3>
-				<p> Collection of websites using react.js framework.</p>
+            <li class="project-card">
+				<div class="project-title-container"><h3>Websites</h3></div>
+				<p> Collection of different themed websites developped using react.js frameworks for practices purposes.</p>                
+                <ul>
+                    <li>HTML/SaSS/JS</li>
+                    <li>react.js</li>
+                </ul>
                 <a href="https://github.com/CarlosTussi/websites">More details</a>
             </li>
         </ul>
