Adjusting font-weight for project card and hamburger menu style

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             <nav>
                 <a href="javascript:void(0)" class="x-button" onclick="closeNav()">&times;</a>
                 <ul>
-                    <li><a href="index.html#home">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#projects">Projects</a></li>
-                    <li><a href="index.html#resume">Resume</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="index.html#home">HOME</a></li>
+                    <li><a href="index.html#about">ABOUT</a></li>
+                    <li><a href="index.html#projects">PROJECTS</a></li>
+                    <li><a href="index.html#resume">RESUME</a></li>
+                    <li><a href="index.html#contact">CONTACT</a></li>
                 </ul>
             </nav>
         </div>
@@ -250,7 +250,7 @@
                     <a href="https://www.linkedin.com/in/cetleite/" ><i  class="fa fa-linkedin-square" style="font-size:36px"></i></a>
                     <a href="https://github.com/CarlosTussi" ><i class="fa fa-github" style="font-size:36px"></i></a>
                 </div>
-                <a href= "mailto:name@email.com">carlos.leite@edu.dsti.institute</a>
+                <a href= "mailto:carlos.leite@edu.dsti.institute">carlos.leite@edu.dsti.institute</a>
             </article>
         </section>
     </main>
