--- a/index.html
+++ b/index.html
@@ -81,10 +81,19 @@
         <section class="about secondary-theme end-section-padding" id="about"> 
             <h2>About <hr class = "hr-secondary"></h2>
 			<article>
-			<p class="intro">Computer Science graduate, with a passion for data and 
-                experience working in international environments. 
-                Currently expanding my expertise, pursuing an MSc in Data 
-                Science and AI. <br> <strong>[This page is under construction]</strong></p> 
+			<p class="intro">Computer Science graduate, with a passion for data and experience 
+                with customer service, I am currently expanding my expertises, pursuing an MSc in Data 
+                Science and AI in Sophia Antipolis, France.
+
+                As a former international steward for a company in the 
+                Middle East, I had the opportunity to immerse myself 
+                in a multicultural environment, having the chance 
+                to work with people from different cultures and 
+                nationalities from all over the world. After 
+                acquiring crucial soft skills such as cultural 
+                awareness, adaptability and the ability to work with people with different backgrounds, 
+                I decided to enrich my knowledge, continuing my studies in
+                the technology field with an MSc in the domain of data science and artificial inteligence.</p> 
         </article>
         </section>
         <div class="transition-to-primary"></div>
@@ -129,116 +138,140 @@
             <article>
                 <h3>Education</h3>
                 <ol class="education">
-                    <li>
-                        <ul class="education-item">
-                            <li>Applied MSc in Data Science and AI</li>
+                    <li class="resume-card"> 
+                        <ul class="resume-card-item">
+                           <li>Applied MSc in Data Science and AI</li>
                             <li>DSTI School of Engineering</li>
                             <li>Sophia Antipolis, France</li>
-                            <li>2024 - 2026 (expected)</li>
                         </ul>
+                        <div class="resume-right-info">2024 - 2026 (expected)</div>
                     </li>
-                    <li>
-                        <ul class="education-item">
+                    <li class="resume-card">
+                        <ul class="resume-card-item">
                             <li>Bachelor of Computer Science
                             <li>Federal University of Rio Grande do Sul</li>
                             <li>Porto Alegre, Brazil</li>
-                            <li>2011 - 2016</li>
                         </ul>
+                        <div class="resume-right-info">2011 - 2016</div>
                     </li>
-                    <li>
-                        <ul class="education-item">
+                    <li class="resume-card">
+                        <ul class="resume-card-item">
                             <li>Science Without Borders </li>
                             <li>Wuhan University of Technology</li>
                             <li>Wuhan, China</li>
-                            <li>2013 - 2014</li>
                         </ul>
+                        <div class="resume-right-info">2013 - 2014</div>
                     </li>
                 </ol>
             </article>
             <article>
                 <h3>Certifications</h3>
                 <ul>
-                    <li>
-                        <ul class = "certification-item">
-                            <li>Neo4j Certified Professional
-                            <li>Neo4j GraphAcademy</li>
-                            <li>08/2024</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class = "certification-item">
+                    <li class="resume-card">
+                        <ul class = "resume-card-item">
                             <li>DELF B2
                             <li>France Éducation international</li>
-                            <li>01/2024</li>
                         </ul>
+                        <div class="resume-right-info">01/2025</div>
                     </li>
-                    <li>
-                        <ul class = "certification-item">
+                    <li class="resume-card">
+                        <ul class = "resume-card-item">
+                            <li>Neo4j Certified Professional
+                            <li>Neo4j GraphAcademy</li>
+                        </ul>
+                        <div class="resume-right-info">08/2024</div>
+                    </li>
+                    <li class="resume-card">
+                        <ul class = "resume-card-item">
                             <li>HSK Level 5
                             <li>National Chinese Proficiency Test Committee</li>
-                            <li>06/2015</li>
                         </ul>
+                        <div class="resume-right-info">06/2015</div>
                     </li>
-                    <li>
-                        <ul class = "certification-item">
+                    <li class="resume-card">
+                        <ul class = "resume-card-item">
                             <li>Cambridge CAE
                             <li>Cambridge University Press & Assessment</li>
-                            <li>03/2013</li>
                         </ul>
+                        <div class="resume-right-info">03/2013</div>
                     </li>
             </article>
             <article>
                 <h3>Experience</h3>
                 <ul>
-                   <li>
-                        <ul class = "experience-item">
+                   <li class="resume-card">
+                        <ul class = "resume-card-item">
                             <li>Italian Language Learning</li>
                             <li>Milan, Italy</li>
-                            <li>2022 - 2023</li>
                         </ul>
+                    <div class="resume-right-info">2022 - 2023</div>
                     </li>
     
-                    <li>
-                        <ul class = "experience-item">
+                    <li class="resume-card">
+                        <ul class = "resume-card-item">
                             <li>Flight Steward</li>
                             <li>Dubai, UAE</li>
-                            <li>2016 - 2022</li>
                         </ul>
+                        <div class="resume-right-info">2016 - 2022</div>
                     </li>
                 </ul>
             </article>
             <article class = "skills">
                 <h3>Skills</h3>
-                <ul>
-                    <li class="skill-title">Data Science</li>
-                    <li>
-                        <ul>
-                            <li>Data Wrangling</li>
-                            <li>NumPy</li>
-                            <li>Pandas</li>
-                            <li>Scikit-learn</li>
-                            <li>Matplotlib</li>
-                            <li>Microsoft Excell</li>
-                        </ul>
-                    </li>
-                    <li class = "skill-title">Database</li>
-                    <li>
-                        <ul>
-                            <li>Microsoft SQL Server</li>
-                            <li>Neo4j</li>
-                            <li>MongoDB</li>
-                        </ul>
-                    </li>
-                    <li class = "skill-title">Programming</li>
-                    <li>
-                        <ul>
-                            <li>Python</li>
-                            <li>R</li>
-                            <li>SQL</li>
-                            <li>C</li>
-                            <li>HTML/CSS/JavaScript</li>
-                        </ul>
-                    </li>
+                <ul class="skills-container">
+                    <div class="skill-dummy-container">
+                        <li class="resume-card-skills">
+                            <ul class = "resume-card-item">
+                                <li>Data Science</li>
+                            </ul>
+                                <ul class="resume-right-info-skills">
+                                    <li>Data Wrangling</li>
+                                    <li>NumPy</li>
+                                    <li>Pandas</li>
+                                    <li>Scikit-learn</li>
+                                    <li>Matplotlib</li>
+                                    <li>Microsoft Excell</li>
+                                </ul>
+                        </li>
+
+                        <li class="resume-card-skills">
+                            <ul class = "resume-card-item">
+                                <li>Database</li>
+                            </ul>
+                            <ul class="resume-right-info-skills">
+                                <li>Microsoft SQL Server</li>
+                                <li>Neo4j</li>
+                                <li>MongoDB</li>
+
+                            </ul>
+                        </li>
+                        
+                        <li class="resume-card-skills">
+                            <ul class = "resume-card-item">
+                                <li>Programming</li>
+                            </ul>
+                            <ul class="resume-right-info-skills">
+                                <li>Python</li>
+                                <li>R</li>
+                                <li>SQL</li>
+                                <li>C</li>
+                                <li>HTML/CSS/JavaScript</li>
+                            </ul>
+                        </li>
+
+                        <li class="resume-card-skills">
+                            <ul class = "resume-card-item">
+                                <li>Languages</li>
+                            </ul>
+                            <ul class="resume-right-info-skills">
+                                <li>Portuguese</li>
+                                <li>English</li>
+                                <li>French</li>
+                                <li>Italian</li>
+                                <li>Mandarin</li>
+                            </ul>
+                        </li>
+                </div>
                 </ul>
             </article>
         </section>
