Updating About me text

--- a/index.html
+++ b/index.html
@@ -83,17 +83,23 @@
 			<article>
 			<p class="intro">Computer Science graduate, with a passion for data and experience 
                 with customer service, I am currently expanding my expertises, pursuing an MSc in Data 
-                Science and AI in Sophia Antipolis, France.
-
+                Science and AI in Sophia Antipolis, France. 
+                <br><br>
                 As a former international steward for a company in the 
-                Middle East, I had the opportunity to immerse myself 
+                Middle East, I had the opportunity to live and work 
                 in a multicultural environment, having the chance 
-                to work with people from different cultures and 
-                nationalities from all over the world. After 
+                to interact with people from different cultures and 
+                nationalities from all over the world. In adition to that, I have already had the change to live for longer periods of time in Brazil, China, UAE, Italy and now France. <br><br>
+
+                
+                After 
                 acquiring crucial soft skills such as cultural 
                 awareness, adaptability and the ability to work with people with different backgrounds, 
                 I decided to enrich my knowledge, continuing my studies in
-                the technology field with an MSc in the domain of data science and artificial inteligence.</p> 
+                the technology field with an MSc in the domain of data science and artificial inteligence. <br><br>
+
+                <br>  We can communicate in Portuguese, English, French, Italian and Mandarin
+ </p> 
         </article>
         </section>
         <div class="transition-to-primary"></div>
