--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 Middle East, I had the opportunity to live and work 
                 in a multicultural environment, having the chance 
                 to interact with people from different cultures and 
-                nationalities from all over the world. In adition to that, I have already had the change to live for longer periods of time in Brazil, China, UAE, Italy and now France. <br><br>
+                nationalities from all over the world. In adition to that, I have already had the chance to live for longer periods of time in Brazil, China, UAE, Italy and now France. <br><br>
 
                 
                 After 
@@ -106,36 +106,36 @@
 		<section class="projects primary-theme end-section-padding" id = "projects">
             <h2>Projects <hr class="hr-primary"> </h2>
             <ul class="projects-container">       
-            <li class="project-card">
-				<div class="project-title-container"><h3>Machine Learning Model for Coral Reef Fish Species Diversity Prediction</h3></div>
-				<p>Machine learning model to predict the diversity index of fish speciesin coral reef ecosystems. Utilized data analysis, feature engineering,and model training techniques.</p>
-                <ul>
-                    <li>Python</li>
-                    <li>EDA</li>
-                    <li>Model Training</li>
-                </ul>
-                <a href="https://github.com/gpealat/coralreef">More details</a>
-            </li>
-			<li class="project-card">
-				<div class="project-title-container"><h3>Rio Property Price Predictor</h3></div>
-				<p> Airbnb rental price prediction model using ML pipelines. Model integration into a web application for pricing insights.</p>
-                <ul>
-                    <li>Python</li>
-                    <li>EDA</li>
-                    <li>Pipeline</li>
-                    <li>Web App</li>
-                </ul>
-                <a href="https://github.com/CarlosTussi/rio_listings">More details</a>
-            </li>
-            <li class="project-card">
-				<div class="project-title-container"><h3>Websites</h3></div>
-				<p> Collection of different themed websites developped using react.js frameworks for practices purposes.</p>                
-                <ul>
-                    <li>HTML/SaSS/JS</li>
-                    <li>react.js</li>
-                </ul>
-                <a href="https://github.com/CarlosTussi/websites">More details</a>
-            </li>
+                <li class="project-card">
+                    <div class="project-title-container"><h3>Rio Property Price Predictor</h3></div>
+                    <p> Airbnb rental price prediction model using ML pipelines. Model integration into a web application for pricing insights.</p>
+                    <ul>
+                        <li>Python</li>
+                        <li>EDA</li>
+                        <li>Pipeline</li>
+                        <li>Web App</li>
+                    </ul>
+                    <a href="https://github.com/CarlosTussi/rio_listings">More details</a>
+                </li>
+                <li class="project-card">
+                    <div class="project-title-container"><h3>Machine Learning Model for Coral Reef Fish Species Diversity Prediction</h3></div>
+                    <p>Machine learning model to predict the diversity index of fish species in coral reef ecosystems. Utilized data analysis, feature engineering,and model training techniques.</p>
+                    <ul>
+                        <li>Python</li>
+                        <li>EDA</li>
+                        <li>Model Training</li>
+                    </ul>
+                    <a href="https://github.com/gpealat/coralreef">More details</a>
+                </li>
+                <li class="project-card">
+                    <div class="project-title-container"><h3>Websites</h3></div>
+                    <p> Collection of different themed websites developped using react.js frameworks for practices purposes.</p>                
+                    <ul>
+                        <li>HTML/SaSS/JS</li>
+                        <li>react.js</li>
+                    </ul>
+                    <a href="https://github.com/CarlosTussi/websites">More details</a>
+                </li>
         </ul>
         </section>
         <div class="transition-to-secondary"></div>
