Fixing project description

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
             <ul class="projects-container">       
                 <li class="project-card">
                     <div class="project-title-container"><h3>Rio Property Price Predictor</h3></div>
-                    <p> Airbnb rental price prediction model using ML pipelines. Model integration into a web application for pricing insights.</p>
+                    <p> Airbnb rental price prediction model using ML pipelines and model integration into a web application for pricing insights.</p>
                     <ul>
                         <li>Python</li>
-                        <li>EDA</li>
+                        <li>EDA / Feature Engineering</li>
                         <li>Pipeline</li>
                         <li>Web App</li>
                     </ul>
@@ -119,10 +119,10 @@
                 </li>
                 <li class="project-card">
                     <div class="project-title-container"><h3>Machine Learning Model for Coral Reef Fish Species Diversity Prediction</h3></div>
-                    <p>Machine learning model to predict the diversity index of fish species in coral reef ecosystems. Utilized data analysis, feature engineering,and model training techniques.</p>
+                    <p>Collaboration in an academic machine learning model project to predict the diversity index of fish species in coral reef ecosystems in the Florida Reef.</p>
                     <ul>
                         <li>Python</li>
-                        <li>EDA</li>
+                        <li>EDA / Feature Engineering</li>
                         <li>Model Training</li>
                     </ul>
                     <a href="https://github.com/gpealat/coralreef">More details</a>
