Fixing typo errors

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 I decided to enrich my knowledge, continuing my studies in
                 the technology field with an MSc in the domain of data science and artificial inteligence. <br><br>
 
-                <br>  We can communicate in Portuguese, English, French, Italian and Mandarin
+                <br>  We can communicate in Portuguese, English, French, Italian and Mandarin.
  </p> 
         </article>
         </section>
@@ -108,7 +108,7 @@
             <ul class="projects-container">       
                 <li class="project-card">
                     <div class="project-title-container"><h3>Rio Property Price Predictor</h3></div>
-                    <p> Airbnb rental price prediction model using ML pipelines and model integration into a web application for pricing insights.</p>
+                    <p> Airbnb rental price prediction model using ML pipelines and model integration into a web application for pricing insights with an R2 score close to 70%. </p>
                     <ul>
                         <li>Python</li>
                         <li>EDA / Feature Engineering</li>
@@ -227,6 +227,7 @@
                                     <li>Pandas</li>
                                     <li>Scikit-learn</li>
                                     <li>Matplotlib</li>
+                                    <li>MLOPS</li>
                                     <li>Microsoft Excell</li>
                                 </ul>
                         </li>
@@ -240,6 +241,15 @@
                                 <li>Neo4j</li>
                                 <li>MongoDB</li>
 
+                            </ul>
+                        </li>
+
+                        <li class="resume-card-skills">
+                            <ul class = "resume-card-item">
+                                <li>Cloud</li>
+                            </ul>
+                            <ul class="resume-right-info-skills">
+                                <li>Amazon AWS</li>
                             </ul>
                         </li>
                         
