[ADD]Project: Agent Based Model

--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
                     </ul>
                     <a href="https://github.com/gpealat/coralreef">More details</a>
                 </li>
+                <li class="project-card">
+                    <div class="project-title-container"><h3>Agent Based Model Flight Service Simulation</h3></div>
+                    <p>This project develops an agent-based simulation model to analyze and optimize in-flight service delivery by cabin crew within commercial aircraft. The primary objective is to quantitatively determine the optimal number of cabin crew members required to serve a given passenger load while maintaining a satisfactory level of customer service.</p>
+                    <ul>
+                        <li>Netlogo</li>
+                    </ul>
+                    <a href="https://github.com/CarlosTussi/agent_model_777">More details</a>
+                </li>
         </ul>
         </section>
         <div class="transition-to-secondary"></div>
