--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
                 <ul>
                     <li class="resume-card">
                         <ul class = "resume-card-item">
+                            <li>SAS 9.4 Base Programming – Performance-Based
+                            <li>SAS Institute</li>
+                        </ul>
+                        <div class="resume-right-info">07/2025</div>
+                    </li>
+                    <li class="resume-card">
+                        <ul class = "resume-card-item">
                             <li>DELF B2
                             <li>France Éducation international</li>
                         </ul>
@@ -268,6 +275,7 @@
                             <ul class="resume-right-info-skills">
                                 <li>Python</li>
                                 <li>R</li>
+                                <li>SAS Base</li>
                                 <li>SQL</li>
                                 <li>C</li>
                                 <li>HTML/CSS/JavaScript</li>
