[ADD]Time-series project

--- a/index.html
+++ b/index.html
@@ -118,6 +118,17 @@
                     <a href="https://github.com/CarlosTussi/rio_listings">More details</a>
                 </li>
                 <li class="project-card">
+                    <div class="project-title-container"><h3>Electricity Consumption Time-Series Analysis and Forecast</h3></div>
+                    <p> Energy consumption forecasting model using feature engineering and ML/statistical models to predict 15‑minute intervals. </p>
+                    <ul>
+                        <li>Time-Series Analysis</li>
+                        <li>Statistical Learning</li>
+                        <li>Machine Learning</li>
+                        <li>EDA / Feature Engineering</li>
+                    </ul>
+                    <a href="https://github.com/CarlosTussi/electricity-timeseries">More details</a>
+                </li>
+                <li class="project-card">
                     <div class="project-title-container"><h3>Machine Learning Model for Coral Reef Fish Species Diversity Prediction</h3></div>
                     <p>Collaboration in an academic machine learning model project to predict the diversity index of fish species in coral reef ecosystems in the Florida Reef.</p>
                     <ul>
