[ADD] Update about section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <section class="about secondary-theme end-section-padding" id="about"> 
             <h2>About <hr class = "hr-secondary"></h2>
 			<article>
-			<p class="intro">Computer Science graduate, with a passion for data and experience 
+			<p class="intro">Computer Science graduate with a strong focus on data-driven problem solving and experience 
                 with customer service, I am currently expanding my expertises, pursuing an MSc in Data 
                 Science and AI in Sophia Antipolis, France. 
                 <br><br>
