[ADD] Rio listing project keywords

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                     <p> Airbnb rental price prediction model using ML pipelines and model integration into a web application for pricing insights with an R2 score close to 70%. </p>
                     <ul>
                         <li>Python</li>
+                        <li>Machine Learning</li>
                         <li>EDA / Feature Engineering</li>
                         <li>Pipeline</li>
                         <li>Web App</li>
